[tool.poetry]
name = "y4-cw-networks-pt2"
version = "0.1.0"
description = ""
authors = ["Jack <jack@theslingsbys.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
matplotlib = "^3.5.1"
tabulate = "^0.8.9"
numpy = "^1.21.5"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
